# spbu-qt-messenger

./: .gitignore  CMakeLists.txt  chatwindow.cpp  chatwindow.h  chatwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  server.cpp  server.h
client/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.h
database/: database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  server.cpp  server.h
